the treas of using

--- a/Python/AliAndPopVSTime.ipynb
+++ b/Python/AliAndPopVSTime.ipynb
@@ -8,38 +8,59 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
     "from matplotlib.ticker import MultipleLocator\n",
+    "import os\n",
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
     "#plt.rcParams['set_minor_locator']=xminorLocator\n",
     "plt.rcParams.update({\n",
     "    \"text.usetex\": True,\n",
     "    \"font.family\": \"sans-serif\",\n",
-    "    \"font.sans-serif\": [\"TimeNewroman\"]})\n",
+    "    \"font.sans-serif\": [\"Time New Rroman\"]})\n",
     "# for Palatino and other serif fonts use:\n",
     "plt.rcParams.update({\n",
     "    \"text.usetex\": True,\n",
     "    \"font.family\": \"serif\",\n",
-    "    \"font.serif\": [\"Palatino\"],\n",
+    "    #\"font.serif\": [\"Palatino\"],\n",
+    "    \"font.serif\": [\"Time New Roman\"], \n",
     "})\n",
     "# It's also possible to use the reduced notation by directly setting font.family:\n",
     "plt.rcParams.update({\n",
     "  \"text.usetex\": True,\n",
-    "  \"font.family\": \"TimeNewroman\",\n",
-    "  #\"font.size\": 12,\n",
+    "  \"font.family\": \"Time New Roman\",\n",
+    "  \"font.size\": 8,\n",
     "})\n",
-    "plt.rcParams['figure.figsize'] = (8,6)\n",
+    "\n",
+    "def cm_to_inch(value):\n",
+    "    return value/2.54\n",
+    "\n",
+    "plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(6.5))\n",
+    "#plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
+    "plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
     "workDir = \"D:\\\\doc\\\\data\\\\ion1testold\\\\PreAlign\\\\\"\n",
     "figureType=\"jpeg\"\n",
-    "figureDPI=1200\n",
+    "figureDPI=1200\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
     "data1=np.loadtxt(\"D:\\\\doc\\\\data\\\\ion1testold\\\\PreAlign\\\\pop.dat\")\n",
-    "data2=np.loadtxt(\"F:\\\\dataofion1\\\\cos1.dat\")\n",
+    "data2=np.loadtxt(\"D:\\\\dataofpro\\\\cos2s.dat\")\n",
+    "\n",
     "x1=data1[:,0]\n",
     "y1=data1[:,1]\n",
-    "x2=data2[:,0]-500\n",
-    "y2=data2[:,2]\n",
+    "x2=data2[:,0]\n",
+    "y2=data2[:,1]\n",
+    "plt.plot(x2,y2)\n",
     "fig, ax1 = plt.subplots()\n",
     "color = 'tab:red'\n",
     "ax1.set_xlim([450,3050])\n",
