--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -60,7 +60,7 @@
     "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1400\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\60\\\\'\n",
-    "#dir='D:\\\\doc\\\\data\\\\ion1test\\\\shift\\\\t1\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\shift\\\\t2\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -183,9 +183,10 @@
     "plt.ylabel(\"Energy (a.u.)\")\n",
     "plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'--')\n",
     "plt.ylim(-0.05,0.5)\n",
+    "plt.xlim(1.75,11.)\n",
     "plt.fill_between(x,y3,x,y3+0.2)\n",
     "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$','$X^2 \\Sigma ^+$'],loc=(0.65,0.7))\n",
-    "#plt.savefig(dir+\"pott.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)"
+    "plt.savefig(dir+\"pott.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)"
    ]
   },
   {
@@ -229,6 +230,82 @@
    "metadata": {},
    "source": [
     "Plot the electronic field of the lasers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "legengLoc=(0.2,0.8)\n",
+    "plt.figure(figsize=((16/2.54),(13/2)))\n",
+    "#plt.figure(figsize=(8,6))\n",
+    "titleLoc=\"left\"\n",
+    "plt.subplot(2,2,1)\n",
+    "plt.title(\"(a)\",loc=titleLoc)\n",
+    "data=np.loadtxt(dir+\"TimFreDis4.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Frequency (a.u.)\")\n",
+    "plt.tricontourf(x,y,z,100,cmap='jet')\n",
+    "#plt.colorbar()\n",
+    "plt.subplot(2,2,2)\n",
+    "plt.title(\"(b)\",loc=titleLoc)\n",
+    "data1=np.loadtxt(dir+\"FreDis1.dat\")\n",
+    "data2=np.loadtxt(dir+\"FreDis2.dat\")\n",
+    "data3=np.loadtxt(dir+\"FreDis3.dat\")\n",
+    "x1=data1[:,0]\n",
+    "y1=data1[:,1]\n",
+    "x2=data2[:,0]\n",
+    "y2=data2[:,1]\n",
+    "x3=data3[:,0]\n",
+    "y3=data3[:,1]\n",
+    "plt.xlabel(\"Intensity (arb.units)\") \n",
+    "plt.ylabel(\"Frequency (a.u.)\")\n",
+    "#plt.xlim(0,5)\n",
+    "plt.ylim(min(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]),max(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]))\n",
+    "plt.plot(y1,x1,\"k-\",y3,x3,'b-.')\n",
+    "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
+    "plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
+    "plt.subplot(2,2,3)\n",
+    "data=np.loadtxt(dir+\"Laser.dat\")\n",
+    "x=data[:,0]\n",
+    "y1=data[:,4]\n",
+    "y2=data[:,5]\n",
+    "y3=data[:,6]\n",
+    "plt.xlim(min(x),max(x))\n",
+    "plt.title(\"(c)\",loc=titleLoc)\n",
+    "plt.plot(x,y1,'k-',x,-y1,'k-',x,y3,'b-.',x,-y3,'b-.')\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
+    "plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
+    "plt.subplot(2,2,4)\n",
+    "plt.title(\"(d)\",loc=titleLoc)\n",
+    "data=np.loadtxt(dir+\"Laser.dat\")\n",
+    "x1=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=data[:,3]\n",
+    "plt.xlim(min(x),max(x))\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "\n",
+    "plt.plot(x1,y1,'k-',x,y3,'b-',)\n",
+    "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
+    "plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
+    "\n",
+    "\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.22)\n",
+    "plt.savefig(dir+\"TimeFrequencyDistribution.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
@@ -1011,7 +1088,7 @@
     "z1=data[:,2]\n",
     "z2=data[:,3]\n",
     "plt.subplot(2,1,1)\n",
-    "plt.tricontourf(x,y,z1,levels,cmap='jet',vmin=0.0,vmax=0.1)\n",
+    "plt.tricontourf(x,y,z1,levels,cmap='jet')#,vmin=0.0,vmax=0.1)\n",
     "plt.colorbar()\n",
     "plt.ylim(min(y),11)\n",
     "plt.subplot(2,1,2)\n",
@@ -1043,7 +1120,6 @@
     "print(\"Checking image list\")\n",
     "n=len(fileList)\n",
     "for ii in range(n):\n",
-    "    if \n",
     "    s1=dir+\"p_vgr_vj\\\\\"+str(fileList[ii])\n",
     "    s2=dir+\"p_exc_vj\\\\\"+str(fileList[ii])\n",
     "    ax1=plt.subplot(1,2,1)\n",
@@ -1110,7 +1186,15 @@
     "                        top=0.9, \n",
     "                        wspace=0.25, \n",
     "                        hspace=0.2)\n",
-    "    plt.savefig(dir+\"p_vgr_vj\\\\\"+fileList[ii][:16]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "    plt.savefig(dir+\"p_vgr_vj\\\\\"+fileList[ii][:16]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "import  imageio\n",
     "import os\n",
@@ -1171,7 +1255,7 @@
     "\n",
     "    plt.figure(figsize=(16/2.54,12.5/2.54))\n",
     "    \n",
-    "    fig=plt.subplots(2,2)\n",
+    "    #fig=plt.subplots(2,2)\n",
     "    #fig.title(\"$t$ = \"+fileList[i][11:13]+\" fs\")\n",
     "    plt.subplot(2,2,1)\n",
     "    plt.tricontourf(x,y,z1,levels,cmap='jet')\n",
@@ -1223,29 +1307,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "    plt.subplot(2,2,2)\n",
-    "        im=plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
-    "        plt.xlim(-11,11)\n",
-    "        plt.ylim(-11,11)\n",
-    "        plt.xlabel(\"$R$ (a.u.)\")\n",
-    "        plt.ylabel(\"$R$ (a.u.)\")\n",
-    "        plt.subplot(2,2,3)\n",
-    "        im=plt.tricontourf(x,y,z3,levels,cmap='jet')\n",
-    "\n",
-    "        plt.xlim(-11,11)\n",
-    "        plt.ylim(-11,11)\n",
-    "        plt.xlabel(\"$R$ (a.u.)\")\n",
-    "        plt.ylabel(\"$R$ (a.u.)\")\n",
+    "gif_name = \"Wave.gif\"\n",
+    "fileList =os.listdir(dir+\"wave\\\\\")\n",
+    "print(fileList)\n",
+    "image_list=list()\n",
+    "print(\"Checking image list\")\n",
+    "n=len(fileList)\n",
+    "for i in range(n):\n",
+    "    s=dir+\"wave\\\\\"+str(fileList[i])\n",
+    "    if s[-5:]==\".jpeg\":\n",
+    "        image_list.append(s)\n",
     "        \n",
-    "        plt.subplot(2,2,4)\n",
-    "        im=plt.tricontourf(x,y,z4,levels,cmap='jet')\n",
-    "        plt.xlim(-11,11)\n",
-    "        plt.ylim(-11,11)\n",
-    "        plt.xlabel(\"$R$ (a.u.)\")\n",
-    "        plt.ylabel(\"$R$ (a.u.)\")\n",
-    "    \n",
-    "    "
+    "        \n",
+    "print(image_list)\n",
+    "myduration=0.3#eval(input(\"duration: s\"))\n",
+    "compose_gif(image_list,dir+gif_name,myduration)\n",
+    "print(\"Created\")   "
    ]
   },
   {
