--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -52,8 +52,30 @@
     "print(f.read(1500))\n",
     "levels=100\n",
     "figureDPI=300\n",
-    "figureType=\"eps\"\n",
+    "figureType=\"jpeg\"\n",
     "timeUnit=\"fs\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt(dir+\"laser.dat\")\n",
+    "x1=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=data[:,3]\n",
+    "#####plt.title(\"(a)\",titleLoc)\n",
+    "plt.subplot(3,1,1)\n",
+    "plt.plot(x1,y1,'k-')\n",
+    "plt.subplot(3,1,2)\n",
+    "plt.ylabel(\"Instensity (a.u.)\")  \n",
+    "plt.plot(x1,y2)\n",
+    "plt.subplot(3,1,3)\n",
+    "plt.plot(x1,y3)\n",
+    "plt.xlabel(\"Time(fs)\")\n"
    ]
   },
   {
@@ -83,7 +105,7 @@
     "y=data[:,1]\n",
     "plt.plot(x,y,'k-')\n",
     "plt.xlabel(\"Frequency (a.u.)\")\n",
-    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "plt.ylabel(\"Intensity (arb.units)\")\n",
     "plt.subplot(3,3,3)\n",
     "##plt.title(\"(c)\",titleLoc)\n",
     "data=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
@@ -116,7 +138,7 @@
     "z=data[:,2]\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.xlabel(\"Time(fs)\")\n",
-    "plt.ylabel(\"Instensity (a.u.)\")\n",
+    "plt.ylabel(\"Intensity (arb.units)\")\n",
     "plt.colorbar()\n",
     "plt.subplot(3,3,7)\n",
     "##plt.title(\"(g)\",titleLoc)\n",
@@ -131,7 +153,7 @@
     "y=data[:,1]\n",
     "plt.plot(x,y,'b-')\n",
     "plt.xlabel(\"Frequency (a.u.)\")\n",
-    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "plt.ylabel(\"Intensity (arb.units)\")\n",
     "plt.subplot(3,3,9)\n",
     "#plt.title(\"(i)\",titleLoc)\n",
     "data=np.loadtxt(dir+\"TimFreDis3.dat\")\n",
@@ -163,7 +185,7 @@
     "z=data[:,2]\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.xlabel(\"Time(fs)\")\n",
-    "plt.ylabel(\"Instensity (a.u.)\")\n",
+    "plt.ylabel(\"Frequency (a.u.)\")\n",
     "plt.colorbar()\n",
     "plt.savefig(dir+\"TimFreDistTotal.\"+figureType,dpi=figureDPI)"
    ]
@@ -179,7 +201,7 @@
     "y=data[:,1]\n",
     "plt.plot(x,y,'k-')\n",
     "plt.xlabel(\"Frequency (a.u.)\")\n",
-    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "plt.ylabel(\"Intensity (arb.units)\")\n",
     "plt.savefig(dir+\"FreDistTotal.\"+figureType,dpi=figureDPI)"
    ]
   },
@@ -189,11 +211,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "legengLoc=(0.65,0.73)\n",
     "plt.figure(figsize=((16/2.54),(13/2)))\n",
     "#plt.figure(figsize=(8,6))\n",
     "titleLoc=\"left\"\n",
     "plt.subplot(2,2,1)\n",
-    "#plt.title(\"(a)\",loc=titleLoc)\n",
+    "plt.title(\"(a)\",loc=titleLoc)\n",
     "data=np.loadtxt(dir+\"TimFreDis4.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
@@ -203,20 +226,27 @@
     "plt.tricontourf(x,y,z,100,cmap='jet')\n",
     "#plt.colorbar()\n",
     "plt.subplot(2,2,2)\n",
-    "#plt.title(\"(b)\",loc=titleLoc)\n",
-    "data=np.loadtxt(dir+\"FreDis4.dat\")\n",
-    "data1=np.loadtxt(dir+\"FreDis2.dat\")\n",
-    "data2=np.loadtxt(dir+\"FreDis3.dat\")\n",
-    "x=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data1[:,1]\n",
-    "y3=data2[:,1]\n",
+    "plt.title(\"(b)\",loc=titleLoc)\n",
+    "data1=np.loadtxt(dir+\"FreDis1.dat\")\n",
+    "data2=np.loadtxt(dir+\"FreDis2.dat\")\n",
+    "data3=np.loadtxt(dir+\"FreDis3.dat\")\n",
+    "data4=np.loadtxt(dir+\"FreDis4.dat\")\n",
+    "x1=data1[:,0]\n",
+    "y1=data1[:,1]\n",
+    "x2=data2[:,0]\n",
+    "y2=data2[:,1]\n",
+    "x3=data3[:,0]\n",
+    "y3=data3[:,1]\n",
+    "x4=data4[:,0]\n",
+    "y4=data4[:,1]\n",
     "plt.xlabel(\"Intensity (arb.units)\") \n",
     "plt.ylabel(\"Frequency (a.u.)\")\n",
     "#plt.xlim(0,5)\n",
     "plt.ylim(min(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]),max(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]))\n",
-    "plt.plot(y1,x,\"k-\",y2,x,\"r--\",y3,x,'b-.')\n",
-    "plt.legend([\"pump\",\"probe\"],loc=(0.65,0.75))\n",
+    "plt.plot(y4,x4)\n",
+    "#plt.plot(y1,x1,\"k-\",y2,x2,\"r--\",y3,x3,'b-.')\n",
+    "#plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
+    "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
     "plt.subplot(2,2,3)\n",
     "data=np.loadtxt(dir+\"Laser.dat\")\n",
     "x=data[:,0]\n",
@@ -224,15 +254,16 @@
     "y2=data[:,5]\n",
     "y3=data[:,6]\n",
     "plt.xlim(min(x),max(x))\n",
-    "#plt.title(\"(c)\",loc=titleLoc)\n",
+    "plt.title(\"(c)\",loc=titleLoc)\n",
     "plt.plot(x,y1,'k-',x,y2,'r--',x,-y1,'k-',x,-y2,'r--',x,y3,'b-.',x,-y3,'b-.')\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
-    "plt.legend([\"pump\",\"probe\"],loc=(0.65,0.75))\n",
+    "#plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
+    "plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
     "plt.subplot(2,2,4)\n",
-    "#plt.title(\"(d)\",loc=titleLoc)\n",
+    "plt.title(\"(d)\",loc=titleLoc)\n",
     "data=np.loadtxt(dir+\"Laser.dat\")\n",
-    "x=data[:,0]\n",
+    "x1=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
     "y3=data[:,3]\n",
@@ -240,8 +271,9 @@
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "\n",
-    "plt.plot(x,y1,'k-',x,y2,'r-',x,y3,'b-',)\n",
-    "plt.legend([\"pump\",\"probe\"],loc=(0.65,0.75))\n",
+    "plt.plot(x1,y1,'k-',x1,y2,'r-',x,y3,'b-',)\n",
+    "#plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
+    "plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
     "\n",
     "\n",
     "plt.subplots_adjust(left=0.125,\n",
@@ -249,8 +281,8 @@
     "                    right=0.9, \n",
     "                    top=0.9, \n",
     "                    wspace=0.3, \n",
-    "                    hspace=0.3)\n",
-    "plt.savefig(dir+\"TimeFrequencyDistribution.\"+figureType,bbox_inches = '',dpi=figureDPI)"
+    "                    hspace=0.22)\n",
+    "plt.savefig(dir+\"TimeFrequencyDistribution.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
