--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -46,6 +46,7 @@
     "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
     "dir='D:\\\\dataofpro\\\\'\n",
     "#dir='D:\\\\doc\\\\data\\\\TimeFrequencyDistribution\\\\t2\\\\'\n",
+    "#dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\20\\\\'#\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -84,93 +85,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "titleLoc=\"left\"\n",
-    "plt.figure(figsize=(12,9))\n",
-    "data=np.loadtxt(dir+\"laser.dat\")\n",
-    "x1=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "y3=data[:,3]\n",
-    "plt.subplot(3,3,1)\n",
-    "#####plt.title(\"(a)\",titleLoc)\n",
-    "plt.plot(x1,y1,'k-')\n",
-    "plt.xlabel(\"Time(fs)\")\n",
-    "plt.ylabel(\"Instensity (a.u.)\")  \n",
-    "#plt.xlim(19,21)\n",
+    "if os.path.exists(dir+'FreDis1.dat'):\n",
+    "    titleLoc=\"left\"\n",
+    "    plt.figure(figsize=(12,9))\n",
+    "    data=np.loadtxt(dir+\"laser.dat\")\n",
+    "    x1=data[:,0]\n",
+    "    y1=data[:,1]\n",
+    "    y2=data[:,2]\n",
+    "    y3=data[:,3]\n",
+    "    plt.subplot(3,3,1)\n",
+    "    #####plt.title(\"(a)\",titleLoc)\n",
+    "    plt.plot(x1,y1,'k-')\n",
+    "    plt.xlabel(\"Time(fs)\")\n",
+    "    plt.ylabel(\"Instensity (a.u.)\")  \n",
+    "    #plt.xlim(19,21)\n",
     "\n",
-    "plt.subplot(3,3,2)\n",
-    "###plt.title(\"(b)\",titleLoc)\n",
-    "data=np.loadtxt(dir+\"FreDis1.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y,'k-')\n",
-    "plt.xlabel(\"Frequency (a.u.)\")\n",
-    "plt.ylabel(\"Intensity (arb.units)\")\n",
-    "plt.subplot(3,3,3)\n",
-    "##plt.title(\"(c)\",titleLoc)\n",
-    "data=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar()\n",
-    "plt.xlabel(\"Time(fs)\")\n",
-    "plt.ylabel(\"Instensity (a.u.)\")\n",
-    "plt.subplot(3,3,4)\n",
-    "##plt.title(\"(d)\",titleLoc)\n",
-    "plt.xlabel(\"Time(fs)\")\n",
-    "plt.ylabel(\"Instensity (a.u.)\")\n",
-    "plt.plot(x1,y2,'r-')\n",
+    "    plt.subplot(3,3,2)\n",
+    "    ###plt.title(\"(b)\",titleLoc)\n",
+    "    data=np.loadtxt(dir+\"FreDis1.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    plt.plot(x,y,'k-')\n",
+    "    plt.xlabel(\"Frequency (a.u.)\")\n",
+    "    plt.ylabel(\"Intensity (arb.units)\")\n",
+    "    plt.subplot(3,3,3)\n",
+    "    ##plt.title(\"(c)\",titleLoc)\n",
+    "    data=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "    plt.colorbar()\n",
+    "    plt.xlabel(\"Time(fs)\")\n",
+    "    plt.ylabel(\"Instensity (a.u.)\")\n",
+    "    plt.subplot(3,3,4)\n",
+    "    ##plt.title(\"(d)\",titleLoc)\n",
+    "    plt.xlabel(\"Time(fs)\")\n",
+    "    plt.ylabel(\"Instensity (a.u.)\")\n",
+    "    plt.plot(x1,y2,'r-')\n",
     "\n",
-    "plt.subplot(3,3,5)\n",
-    "#plt.title(\"(e)\",titleLoc)\n",
-    "data=np.loadtxt(dir+\"FreDis2.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y,'r-')\n",
-    "plt.xlabel(\"Frequency (a.u.)\")\n",
-    "plt.ylabel(\"Intensity (a.u.)\")\n",
-    "plt.subplot(3,3,6)\n",
-    "##plt.title(\"(f)\",titleLoc)\n",
-    "data=np.loadtxt(dir+\"TimFreDis2.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.xlabel(\"Time(fs)\")\n",
-    "plt.ylabel(\"Intensity (arb.units)\")\n",
-    "plt.colorbar()\n",
-    "plt.subplot(3,3,7)\n",
-    "##plt.title(\"(g)\",titleLoc)\n",
-    "plt.xlabel(\"Time(fs)\")\n",
-    "plt.ylabel(\"Instensity (a.u.)\")\n",
-    "plt.plot(x1,y3,'b-')\n",
+    "    plt.subplot(3,3,5)\n",
+    "    #plt.title(\"(e)\",titleLoc)\n",
+    "    data=np.loadtxt(dir+\"FreDis2.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    plt.plot(x,y,'r-')\n",
+    "    plt.xlabel(\"Frequency (a.u.)\")\n",
+    "    plt.ylabel(\"Intensity (a.u.)\")\n",
+    "    plt.subplot(3,3,6)\n",
+    "    ##plt.title(\"(f)\",titleLoc)\n",
+    "    data=np.loadtxt(dir+\"TimFreDis2.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "    plt.xlabel(\"Time(fs)\")\n",
+    "    plt.ylabel(\"Intensity (arb.units)\")\n",
+    "    plt.colorbar()\n",
+    "    plt.subplot(3,3,7)\n",
+    "    ##plt.title(\"(g)\",titleLoc)\n",
+    "    plt.xlabel(\"Time(fs)\")\n",
+    "    plt.ylabel(\"Instensity (a.u.)\")\n",
+    "    plt.plot(x1,y3,'b-')\n",
     "\n",
-    "plt.subplot(3,3,8)\n",
-    "##plt.title(\"(h)\",titleLoc)\n",
-    "data=np.loadtxt(dir+\"FreDis3.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y,'b-')\n",
-    "plt.xlabel(\"Frequency (a.u.)\")\n",
-    "plt.ylabel(\"Intensity (arb.units)\")\n",
-    "plt.subplot(3,3,9)\n",
-    "#plt.title(\"(i)\",titleLoc)\n",
-    "data=np.loadtxt(dir+\"TimFreDis3.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.xlabel(\"Time(fs)\")\n",
-    "plt.ylabel(\"Instensity (a.u.)\")\n",
-    "plt.colorbar()\n",
-    "plt.subplots_adjust(left=0.125,\n",
-    "                    bottom=0.1, \n",
-    "                    right=0.9, \n",
-    "                    top=0.9, \n",
-    "                    wspace=0.3, \n",
-    "                    hspace=0.3)\n",
-    "plt.savefig(dir+\"LaserTimFreDis.\"+figureType,dpi=figureDPI)"
+    "    plt.subplot(3,3,8)\n",
+    "    ##plt.title(\"(h)\",titleLoc)\n",
+    "    data=np.loadtxt(dir+\"FreDis3.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    plt.plot(x,y,'b-')\n",
+    "    plt.xlabel(\"Frequency (a.u.)\")\n",
+    "    plt.ylabel(\"Intensity (arb.units)\")\n",
+    "    plt.subplot(3,3,9)\n",
+    "    #plt.title(\"(i)\",titleLoc)\n",
+    "    data=np.loadtxt(dir+\"TimFreDis3.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "    plt.xlabel(\"Time(fs)\")\n",
+    "    plt.ylabel(\"Instensity (a.u.)\")\n",
+    "    plt.colorbar()\n",
+    "    plt.subplots_adjust(left=0.125,\n",
+    "                        bottom=0.1, \n",
+    "                        right=0.9, \n",
+    "                        top=0.9, \n",
+    "                        wspace=0.3, \n",
+    "                        hspace=0.3)\n",
+    "    plt.savefig(dir+\"LaserTimFreDis.\"+figureType,dpi=figureDPI)"
    ]
   },
   {
