--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -59,8 +59,8 @@
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
     "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1400\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\60\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\shift\\\\t2\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\50\\\\'\n",
+    "#dir='D:\\\\doc\\\\data\\\\ion1test\\\\shift\\\\t2\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -238,74 +238,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "legengLoc=(0.2,0.8)\n",
-    "plt.figure(figsize=((16/2.54),(13/2)))\n",
-    "#plt.figure(figsize=(8,6))\n",
-    "titleLoc=\"left\"\n",
-    "plt.subplot(2,2,1)\n",
-    "plt.title(\"(a)\",loc=titleLoc)\n",
-    "data=np.loadtxt(dir+\"TimFreDis4.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"Frequency (a.u.)\")\n",
-    "plt.tricontourf(x,y,z,100,cmap='jet')\n",
-    "#plt.colorbar()\n",
-    "plt.subplot(2,2,2)\n",
-    "plt.title(\"(b)\",loc=titleLoc)\n",
-    "data1=np.loadtxt(dir+\"FreDis1.dat\")\n",
-    "data2=np.loadtxt(dir+\"FreDis2.dat\")\n",
-    "data3=np.loadtxt(dir+\"FreDis3.dat\")\n",
-    "x1=data1[:,0]\n",
-    "y1=data1[:,1]\n",
-    "x2=data2[:,0]\n",
-    "y2=data2[:,1]\n",
-    "x3=data3[:,0]\n",
-    "y3=data3[:,1]\n",
-    "plt.xlabel(\"Intensity (arb.units)\") \n",
-    "plt.ylabel(\"Frequency (a.u.)\")\n",
-    "#plt.xlim(0,5)\n",
-    "plt.ylim(min(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]),max(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]))\n",
-    "plt.plot(y1,x1,\"k-\",y3,x3,'b-.')\n",
-    "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
-    "plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
-    "plt.subplot(2,2,3)\n",
-    "data=np.loadtxt(dir+\"Laser.dat\")\n",
-    "x=data[:,0]\n",
-    "y1=data[:,4]\n",
-    "y2=data[:,5]\n",
-    "y3=data[:,6]\n",
-    "plt.xlim(min(x),max(x))\n",
-    "plt.title(\"(c)\",loc=titleLoc)\n",
-    "plt.plot(x,y1,'k-',x,-y1,'k-',x,y3,'b-.',x,-y3,'b-.')\n",
-    "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"Intensity (a.u.)\")\n",
-    "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
-    "plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
-    "plt.subplot(2,2,4)\n",
-    "plt.title(\"(d)\",loc=titleLoc)\n",
-    "data=np.loadtxt(dir+\"Laser.dat\")\n",
-    "x1=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "y3=data[:,3]\n",
-    "plt.xlim(min(x),max(x))\n",
-    "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "if os.path.exists(dir+'FreDis1.dat'):\n",
+    "    legengLoc=(0.2,0.8)\n",
+    "    plt.figure(figsize=((16/2.54),(13/2)))\n",
+    "    #plt.figure(figsize=(8,6))\n",
+    "    titleLoc=\"left\"\n",
+    "    plt.subplot(2,2,1)\n",
+    "    plt.title(\"(a)\",loc=titleLoc)\n",
+    "    data=np.loadtxt(dir+\"TimFreDis4.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
+    "    plt.xlabel(\"Time (fs)\")\n",
+    "    plt.ylabel(\"Frequency (a.u.)\")\n",
+    "    plt.tricontourf(x,y,z,100,cmap='jet')\n",
+    "    #plt.colorbar()\n",
+    "    plt.subplot(2,2,2)\n",
+    "    plt.title(\"(b)\",loc=titleLoc)\n",
+    "    data1=np.loadtxt(dir+\"FreDis1.dat\")\n",
+    "    data2=np.loadtxt(dir+\"FreDis2.dat\")\n",
+    "    data3=np.loadtxt(dir+\"FreDis3.dat\")\n",
+    "    x1=data1[:,0]\n",
+    "    y1=data1[:,1]\n",
+    "    x2=data2[:,0]\n",
+    "    y2=data2[:,1]\n",
+    "    x3=data3[:,0]\n",
+    "    y3=data3[:,1]\n",
+    "    plt.xlabel(\"Intensity (arb.units)\") \n",
+    "    plt.ylabel(\"Frequency (a.u.)\")\n",
+    "    #plt.xlim(0,5)\n",
+    "    plt.ylim(min(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]),max(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]))\n",
+    "    plt.plot(y1,x1,\"k-\",y3,x3,'b-.')\n",
+    "    #plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
+    "    plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
+    "    plt.subplot(2,2,3)\n",
+    "    data=np.loadtxt(dir+\"Laser.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y1=data[:,4]\n",
+    "    y2=data[:,5]\n",
+    "    y3=data[:,6]\n",
+    "    plt.xlim(min(x),max(x))\n",
+    "    plt.title(\"(c)\",loc=titleLoc)\n",
+    "    plt.plot(x,y1,'k-',x,-y1,'k-',x,y3,'b-.',x,-y3,'b-.')\n",
+    "    plt.xlabel(\"Time (fs)\")\n",
+    "    plt.ylabel(\"Intensity (a.u.)\")\n",
+    "    #plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
+    "    plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
+    "    plt.subplot(2,2,4)\n",
+    "    plt.title(\"(d)\",loc=titleLoc)\n",
+    "    data=np.loadtxt(dir+\"Laser.dat\")\n",
+    "    x1=data[:,0]\n",
+    "    y1=data[:,1]\n",
+    "    y2=data[:,2]\n",
+    "    y3=data[:,3]\n",
+    "    plt.xlim(min(x),max(x))\n",
+    "    plt.xlabel(\"Time (fs)\")\n",
+    "    plt.ylabel(\"Intensity (a.u.)\")\n",
     "\n",
-    "plt.plot(x1,y1,'k-',x,y3,'b-',)\n",
-    "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
-    "plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
+    "    plt.plot(x1,y1,'k-',x,y3,'b-',)\n",
+    "    #plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
+    "    plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
     "\n",
     "\n",
-    "plt.subplots_adjust(left=0.125,\n",
-    "                    bottom=0.1, \n",
-    "                    right=0.9, \n",
-    "                    top=0.9, \n",
-    "                    wspace=0.3, \n",
-    "                    hspace=0.22)\n",
-    "plt.savefig(dir+\"TimeFrequencyDistribution.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+    "    plt.subplots_adjust(left=0.125,\n",
+    "                        bottom=0.1, \n",
+    "                        right=0.9, \n",
+    "                        top=0.9, \n",
+    "                        wspace=0.3, \n",
+    "                        hspace=0.22)\n",
+    "    plt.savefig(dir+\"TimeFrequencyDistribution.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
