--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -213,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "legengLoc=(0.65,0.73)\n",
+    "legengLoc=(0.55,0.73)\n",
     "plt.figure(figsize=((16/2.54),(13/2)))\n",
     "#plt.figure(figsize=(8,6))\n",
     "titleLoc=\"left\"\n",
@@ -245,8 +245,9 @@
     "plt.ylabel(\"Frequency (a.u.)\")\n",
     "#plt.xlim(0,5)\n",
     "plt.ylim(min(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]),max(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]))\n",
-    "plt.plot(y4,x4)\n",
-    "#plt.plot(y1,x1,\"k-\",y2,x2,\"r--\",y3,x3,'b-.')\n",
+    "#plt.plot(y4,x4)\n",
+    "plt.plot(y1,x1,\"k-\",y2,x2,\"r--\",y3,x3,'b-.')\n",
+    "plt.legend([\"pump1\",\"pump2\"],loc=legengLoc)\n",
     "#plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
     "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
     "plt.subplot(2,2,3)\n",
@@ -260,8 +261,9 @@
     "plt.plot(x,y1,'k-',x,y2,'r--',x,-y1,'k-',x,-y2,'r--',x,y3,'b-.',x,-y3,'b-.')\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "plt.legend([\"pump1\",\"pump2\"],loc=legengLoc)\n",
     "#plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
-    "plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
+    "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
     "plt.subplot(2,2,4)\n",
     "plt.title(\"(d)\",loc=titleLoc)\n",
     "data=np.loadtxt(dir+\"Laser.dat\")\n",
@@ -274,8 +276,9 @@
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "\n",
     "plt.plot(x1,y1,'k-',x1,y2,'r-',x,y3,'b-',)\n",
+    "plt.legend([\"pump1\",\"pump2\"],loc=legengLoc)\n",
     "#plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
-    "plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
+    "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
     "\n",
     "\n",
     "plt.subplots_adjust(left=0.125,\n",
