The trace of using

--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -16,9 +16,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Working directory D:\\doc\\data\\ion1test\\twopump\\55\\\n",
+      "\n",
+      "\n",
+      " Date and time of begin: 2022/ 8/ 1   8: 5:58\n",
+      " The calculation starts at   0.0000000000000000      femtoseconds and ends at   100.10000149160625      femtoseconds\n",
+      " |----- Quantization parameter -----|\n",
+      " dt in fs    0.10000\n",
+      "  n_dt=        1001\n",
+      "  Calculated time boundary at           0        -199        1001\n",
+      "  Calculated time boundary at  -20.000000000000000      fs\n",
+      "         nr=       128       nj=        60     trux=        15       nn=       900\n",
+      "       xmin=   1.75000     xmax=  20.00000       dx=   0.14258\n",
+      " |-----  Molecular parameters  -----|\n",
+      "  Reduced mass        =   1604.3258056640625      a.u.\n",
+      "  Rotation coefficient=   7.5100002288818359      1/cm\n",
+      " Absorbing boundary   1.0000000000000000      :   19.500000000000000     \n",
+      " Set pulses data by set_pulse.in\n",
+      " |----- Laser pulse parameters -----|\n",
+      "       E-feild(V/m)       Freqceny(cm)    Center_time(ps)           FWHM(ps)          Phase(pi)\n",
+      "     0.90000000E+10     29265.00000000         0.02000000         0.01000000         0.00000000\n",
+      "     0.90000000E+10     29265.00000000         0.07500000         0.01000000         0.00000000\n",
+      "     0.00000000E+00     43000.00000000         0.06000000         0.01000000         0.00000000\n",
+      " Set special P_L and write the data in \"lengdre.dat\"\n",
+      "  The upper limit of the number of quantum rotations\n",
+      "  at the initial moment is 2\n",
+      "  The temperature of the system is  2.0 K\n",
+      " The max of J of   2.0  K, is 0.304\n",
+      " -Before scaling initial energy in cm-1 (0,0)   317.01165648724339     \n",
+      " -The total population = \n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -58,8 +94,8 @@
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq50fs\\\\\"\n",
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
     "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1400\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\50\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\42n\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\55\\\\'\n",
     "#dir='D:\\\\doc\\\\data\\\\ion1test\\\\shift\\\\t2\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
@@ -239,7 +275,7 @@
    "outputs": [],
    "source": [
     "if os.path.exists(dir+'FreDis1.dat'):\n",
-    "    legengLoc=(0.2,0.8)\n",
+    "    legengLoc=(0.6,0.8)\n",
     "    plt.figure(figsize=((16/2.54),(13/2)))\n",
     "    #plt.figure(figsize=(8,6))\n",
     "    titleLoc=\"left\"\n",
@@ -268,7 +304,7 @@
     "    plt.ylabel(\"Frequency (a.u.)\")\n",
     "    #plt.xlim(0,5)\n",
     "    plt.ylim(min(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]),max(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]))\n",
-    "    plt.plot(y1,x1,\"k-\",y3,x3,'b-.')\n",
+    "    plt.plot(y1,x1,\"k-\",y2,x2,'b-.')\n",
     "    #plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
     "    plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
     "    plt.subplot(2,2,3)\n",
@@ -279,7 +315,7 @@
     "    y3=data[:,6]\n",
     "    plt.xlim(min(x),max(x))\n",
     "    plt.title(\"(c)\",loc=titleLoc)\n",
-    "    plt.plot(x,y1,'k-',x,-y1,'k-',x,y3,'b-.',x,-y3,'b-.')\n",
+    "    plt.plot(x,y1,'k-',x,-y1,'k-',x,y2,'b-.',x,-y2,'b-.')\n",
     "    plt.xlabel(\"Time (fs)\")\n",
     "    plt.ylabel(\"Intensity (a.u.)\")\n",
     "    #plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
@@ -295,7 +331,7 @@
     "    plt.xlabel(\"Time (fs)\")\n",
     "    plt.ylabel(\"Intensity (a.u.)\")\n",
     "\n",
-    "    plt.plot(x1,y1,'k-',x,y3,'b-',)\n",
+    "    plt.plot(x1,y1,'k-',x,y2,'b-',)\n",
     "    #plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
     "    plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
     "\n",
@@ -493,7 +529,7 @@
     "plt.xlabel('$\\\\textit{R}$ (a.u.)')\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'b--')\n",
-    "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$','$X^2 \\Sigma ^+$'],loc=(0.55,0.7))\n",
+    "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$','$X^2 \\Sigma ^+$'],loc=(0.55,0.8))\n",
     "plt.subplot(1,2,2)\n",
     "if os.path.exists(dir+\"Dipole.dat\"):\n",
     "    data=np.loadtxt(dir+\"Dipole.dat\")\n",
