--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -14,24 +14,28 @@
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
     "#plt.rcParams['set_minor_locator']=xminorLocator\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"sans-serif\",\n",
-    "    \"font.sans-serif\": [\"Time New Rroman\"]})\n",
+    "# plt.rcParams.update({\n",
+    "#     \"text.usetex\": True,\n",
+    "#     \"font.family\": \"sans-serif\",\n",
+    "#     \"font.sans-serif\": [\"Time New Rroman\"]})\n",
     "# for Palatino and other serif fonts use:\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"serif\",\n",
-    "    #\"font.serif\": [\"Palatino\"],\n",
-    "    \"font.serif\": [\"Time New Roman\"], \n",
-    "})\n",
+    "# plt.rcParams.update({\n",
+    "#     \"text.usetex\": True,\n",
+    "#     \"font.family\": \"serif\",\n",
+    "#     #\"font.serif\": [\"Palatino\"],\n",
+    "#     \"font.serif\": [\"Time New Roman\"], \n",
+    "# })\n",
     "# It's also possible to use the reduced notation by directly setting font.family:\n",
     "plt.rcParams.update({\n",
     "  \"text.usetex\": True,\n",
     "  \"font.family\": \"Time New Roman\",\n",
     "  \"font.size\": 8,\n",
     "})\n",
-    "\n",
+    "# font={'family':'serif',\n",
+    "#       'serif':'Time New Roman',\n",
+    "#       'weight':'normal',\n",
+    "#       'size':8}\n",
+    "# plt.rc('font',**font)\n",
     "def cm_to_inch(value):\n",
     "    return value/2.54\n",
     "\n",
@@ -213,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "legengLoc=(0.55,0.73)\n",
+    "legengLoc=(0.55,0.65)\n",
     "plt.figure(figsize=((16/2.54),(13/2)))\n",
     "#plt.figure(figsize=(8,6))\n",
     "titleLoc=\"left\"\n",
@@ -245,10 +249,10 @@
     "plt.ylabel(\"Frequency (a.u.)\")\n",
     "#plt.xlim(0,5)\n",
     "plt.ylim(min(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]),max(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]))\n",
-    "#plt.plot(y4,x4)\n",
-    "plt.plot(y1,x1,\"k-\",y2,x2,\"r--\",y3,x3,'b-.')\n",
-    "plt.legend([\"pump1\",\"pump2\"],loc=legengLoc)\n",
-    "#plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
+    "plt.plot(y4,x4)\n",
+    "#plt.plot(y1,x1,\"k-\",y2,x2,\"r--\",y3,x3,'b-.')\n",
+    "#plt.legend([\"pump1\",\"pump2\",\"probe\"],loc=(0.55,0.7))\n",
+    "#plt.legend([\"pump\",\"probe\"],loc=(0.6,0.75))\n",
     "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
     "plt.subplot(2,2,3)\n",
     "data=np.loadtxt(dir+\"Laser.dat\")\n",
@@ -261,7 +265,7 @@
     "plt.plot(x,y1,'k-',x,y2,'r--',x,-y1,'k-',x,-y2,'r--',x,y3,'b-.',x,-y3,'b-.')\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
-    "plt.legend([\"pump1\",\"pump2\"],loc=legengLoc)\n",
+    "plt.legend([\"pump1\",\"pump2\",\"probe\"],loc=legengLoc)\n",
     "#plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
     "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
     "plt.subplot(2,2,4)\n",
@@ -276,7 +280,7 @@
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "\n",
     "plt.plot(x1,y1,'k-',x1,y2,'r-',x,y3,'b-',)\n",
-    "plt.legend([\"pump1\",\"pump2\"],loc=legengLoc)\n",
+    "plt.legend([\"pump1\",\"pump2\",'probe'],loc=legengLoc)\n",
     "#plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
     "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
     "\n",
