--- a/Python/xyPlot.ipynb
+++ b/Python/xyPlot.ipynb
@@ -13,39 +13,20 @@
     "import os\n",
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
-    "#plt.rcParams['set_minor_locator']=xminorLocator\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"sans-serif\",\n",
-    "    \"font.sans-serif\": [\"Time New Rroman\"]})\n",
-    "# for Palatino and other serif fonts use:\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"serif\",\n",
-    "    #\"font.serif\": [\"Palatino\"],\n",
-    "    \"font.serif\": [\"Time New Roman\"], \n",
-    "})\n",
     "# It's also possible to use the reduced notation by directly setting font.family:\n",
     "plt.rcParams.update({\n",
     "  \"text.usetex\": True,\n",
     "  \"font.family\": \"Time New Roman\",\n",
     "  #\"font.size\": 16,\n",
     "})\n",
-    "\n",
     "def cm_to_inch(value):\n",
     "    return value/2.54\n",
-    "\n",
     "#plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(5))\n",
     "#plt.rcParams['figure.figsize'] =(8,5)#(3.5,2.5)\n",
     "#plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
-    "#from mpl_toolkits.mplot3d import Axes3D\n",
-    "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq50fs\\\\\"\n",
-    "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
-    "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
-    "dir='D:\\\\dataofpro\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\twocolor\\\\twocolor2\\\\'\n",
+    "\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "#f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -53,7 +34,7 @@
     "levels=100\n",
     "figureDPI=1200\n",
     "figureType=\"jpg\"\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\'"
+    "dir='the path to the data file'"
    ]
   },
   {
