--- a/Python/AliAndPopVSTime.ipynb
+++ b/Python/AliAndPopVSTime.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "\n",
     "data1=np.loadtxt(\"D:\\\\doc\\\\data\\\\ion1testold\\\\PreAlign\\\\pop.dat\")\n",
-    "data2=np.loadtxt(\"D:\\\\dataofpro\\\\cos2s.dat\")\n",
+    "data2=np.loadtxt(\"D:\\\\doc\\\\data\\\\ori\\\\oritest1\\\\cos2s.dat\")\n",
     "\n",
     "x1=data1[:,0]\n",
     "y1=data1[:,1]\n",
@@ -67,7 +67,7 @@
     "ax1.set_ylim([0.32,0.67])\n",
     "ax1.set_xlabel('Time (fs)')\n",
     "ax1.set_ylabel('Ionization probability', color=color)\n",
-    "ax1.scatter(x1, y1, color=color)\n",
+    "ax1.scatter(x1, y1, color=color,marker=\".\")\n",
     "ax1.tick_params(axis='y', labelcolor=color)\n",
     "\n",
     "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
