--- a/Python/FindMax.ipynb
+++ b/Python/FindMax.ipynb
@@ -35,24 +35,25 @@
     "def cm_to_inch(value):\n",
     "    return value/2.54\n",
     "\n",
-    "#plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(6.5))\n",
-    "plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
+    "plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(6.5))\n",
+    "#plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
     "plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
-    "#from mpl_toolkits.mplot3d import Axes3D\n",
-    "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq50fs\\\\\"\n",
-    "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
-    "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ori\\\\35\\\\'\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "dir='D:\\\\doc\\\\data\\\\ori\\\\oritest1\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
-    "# f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
-    "# print(f.read(1500))\n",
+    "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
+    "print(f.read(1500))\n",
     "levels=100\n",
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
-    "timeUnit=\"fs\""
+    "timeUnit=\"fs\"\n",
+    "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
+    "print(f.read())\n",
+    "import os\n",
+    "os.startfile(dir)"
    ]
   },
   {
@@ -199,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(8,6))\n",
+    "\n",
     "j=0\n",
     "dataw=np.loadtxt(\"D:\\\\K.txt\")\n",
     "f=open(dir+'TmpTimOri.dat','w')\n",
