--- a/Python/oriplot.ipynb
+++ b/Python/oriplot.ipynb
@@ -8,33 +8,49 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
     "from matplotlib.ticker import MultipleLocator\n",
+    "import os\n",
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
     "#plt.rcParams['set_minor_locator']=xminorLocator\n",
     "plt.rcParams.update({\n",
     "    \"text.usetex\": True,\n",
     "    \"font.family\": \"sans-serif\",\n",
-    "    \"font.sans-serif\": [\"TimeNewroman\"]})\n",
+    "    \"font.sans-serif\": [\"Time New Rroman\"]})\n",
     "# for Palatino and other serif fonts use:\n",
     "plt.rcParams.update({\n",
     "    \"text.usetex\": True,\n",
     "    \"font.family\": \"serif\",\n",
-    "    \"font.serif\": [\"Palatino\"],\n",
+    "    #\"font.serif\": [\"Palatino\"],\n",
+    "    \"font.serif\": [\"Time New Roman\"], \n",
     "})\n",
     "# It's also possible to use the reduced notation by directly setting font.family:\n",
     "plt.rcParams.update({\n",
     "  \"text.usetex\": True,\n",
-    "  \"font.family\": \"TimeNewroman\"\n",
+    "  \"font.family\": \"Time New Roman\",\n",
+    "  \"font.size\": 8,\n",
     "})\n",
-    "#from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
-    "#dir=\"F:\\\\doc\\\\ori1\\\\twoHCP\\\\orient_by_two_oppposite_HCP_with_different_delay_time_at_5_K\\\\26\\\\\"\n",
-    "dir='D:\\\\doc\\\\data\\\\ori\\\\15\\\\5000\\\\'\n",
-    "plt.rcParams['figure.figsize'] = (8,6)\n",
+    "def cm_to_inch(value):\n",
+    "    return value/2.54\n",
+    "\n",
+    "plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(6.5))\n",
+    "#plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
+    "plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "dir='D:\\\\doc\\\\data\\\\ori\\\\oritest1\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\'\n",
+    "print('Working directory',dir)\n",
+    "print(\"\\n\")\n",
+    "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
+    "print(f.read(1500))\n",
+    "levels=100\n",
+    "figureDPI=1200\n",
+    "figureType=\"jpeg\"\n",
+    "timeUnit=\"fs\"\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
     "print(f.read())\n",
     "import os\n",
@@ -50,6 +66,28 @@
     "TimeBegin = -2500\n",
     "TimeEnd =7500\n",
     "TimeTurn =7500"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DataAng =np.loadtxt(dir+\"wave0.dat\")\n",
+    "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=DataAng[:,0]\n",
+    "y=DataAng[:,1]\n",
+    "z=DataAng[:,2]\n",
+    "plt.xlim(-5, 5)\n",
+    "plt.ylim(-5, 5)\n",
+    "plt.title('(a)',loc='left')\n",
+    "ax=plt.tricontourf(x,y,z)\n",
+    "#interpolation='spline16'\n",
+    "plt.colorbar()\n",
+    "plt.xlabel(\"$\\tR$ (a.u.)\")\n",
+    "plt.ylabel(\"$\\tR$ (a.u.)\")"
    ]
   },
   {
@@ -106,8 +144,8 @@
     "plt.xlabel('Time (fs)')\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "plt.xlim(TimeBegin, TimeEnd)\n",
-    "plt.plot(x,y1,'k-',x,y2,'r-')\n",
-    "plt.legend([\"First\", \"Second\"],loc=(0.75,0.7))\n",
+    "plt.plot(x,y1,'k-')#,x,y2,'r-')\n",
+    "#plt.legend([\"First\", \"Second\"],loc=(0.75,0.7))\n",
     "plt.savefig(dir+\"LaserFiled.jpeg\",bbox_inches = 'tight',transparent=True,dpi=600)\n",
     "plt.show()"
    ]
