--- a/Python/MultiInitialStateOriPlot.ipynb
+++ b/Python/MultiInitialStateOriPlot.ipynb
@@ -42,10 +42,10 @@
     "plt.rcParams['ytick.direction'] = 'in'\n",
     "#from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
-    "dir='D:\\\\dataofPro\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ori\\\\jeq\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
-    "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
+    "f=open(dir+str(0)+\"\\\\alog.dat\",encoding=\"utf-8\")\n",
     "print(f.read(1500))\n",
     "levels=100\n",
     "figureDPI=1200\n",
@@ -59,22 +59,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=loadtxt(dir+'0\\\\tap.dat')\n",
+    "j=0\n",
+    "data=np.loadtxt(dir+'0\\\\tap.dat')\n",
     "x=data[:,0]/2250\n",
     "y=data[:,1]/180\n",
-    "for i in range(0,15):\n",
-    "    data=loadtxt(dir+str(i)+'tap.dat')\n",
-    "    z=data[:,2]+z\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar()\n",
-    "plt.xlabel('Time (fs)')\n",
-    "plt.ylabel('$\\\\theta$ ($\\\\pi$)')"
+    "print(len(x))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "dataw=np.loadtxt(\"D:\\\\K.txt\")\n",
+    "w=[0 for i in range(len(dataw[:,1]))]\n",
+    "z= [0 for i in range(len(x))]\n",
+    "for k in range(0,len(dataw[:,1])):\n",
+    "    w[k] = dataw[k,1]\n",
+    "    print('J = ',k,w[k])\n",
+    "for i in range(0,len(dataw[:,1])):\n",
+    "    print('J= ',i)\n",
+    "    data=np.loadtxt(dir+str(i)+'\\\\tap.dat')\n",
+    "    print(dir+str(i)+'\\\\tap.dat')\n",
+    "    for j in range(0,240000-1):\n",
+    "        z[j]=data[j,2]*w[i]+z[j]\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.title('    $T$ =  0 K',loc='left')\n",
+    "plt.colorbar()\n",
+    "plt.xlabel('Time ($t$/$T_{\\\\rm{rot}}$)')\n",
+    "plt.ylabel('$\\\\theta$ ($\\\\pi$)')\n",
+    "plt.savefig(dir+\"wap00K.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)\n",
+    "plt.savefig(dir+\"wap00K.\"+\"eps\",bbox_inches=\"tight\",transparent=True,dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Time ($t$/$T_{rot}$)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -88,12 +127,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
+    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
    }
   }
  },
