--- a/Python/AliAndPopVSTime.ipynb
+++ b/Python/AliAndPopVSTime.ipynb
@@ -14,24 +14,28 @@
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
     "#plt.rcParams['set_minor_locator']=xminorLocator\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"sans-serif\",\n",
-    "    \"font.sans-serif\": [\"Time New Rroman\"]})\n",
+    "# plt.rcParams.update({\n",
+    "#     \"text.usetex\": True,\n",
+    "#     \"font.family\": \"sans-serif\",\n",
+    "#     \"font.sans-serif\": [\"Time New Rroman\"]})\n",
     "# for Palatino and other serif fonts use:\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"serif\",\n",
-    "    #\"font.serif\": [\"Palatino\"],\n",
-    "    \"font.serif\": [\"Time New Roman\"], \n",
-    "})\n",
+    "# plt.rcParams.update({\n",
+    "#     \"text.usetex\": True,\n",
+    "#     \"font.family\": \"serif\",\n",
+    "#     #\"font.serif\": [\"Palatino\"],\n",
+    "#     \"font.serif\": [\"Time New Roman\"], \n",
+    "# })\n",
     "# It's also possible to use the reduced notation by directly setting font.family:\n",
     "plt.rcParams.update({\n",
     "  \"text.usetex\": True,\n",
     "  \"font.family\": \"Time New Roman\",\n",
     "  \"font.size\": 8,\n",
     "})\n",
-    "\n",
+    "font={'family':'serif',\n",
+    "      'serif':'Time New Roman',\n",
+    "      'weight':'normal',\n",
+    "      'size':8}\n",
+    "plt.rc('font',**font)\n",
     "def cm_to_inch(value):\n",
     "    return value/2.54\n",
     "\n",
@@ -51,11 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "data1=np.loadtxt(\"D:\\\\doc\\\\data\\\\ion1testold\\\\PreAlign\\\\pop.dat\")\n",
     "data2=np.loadtxt(\"D:\\\\doc\\\\data\\\\ori\\\\oritest1\\\\cos2s.dat\")\n",
-    "\n",
     "x1=data1[:,0]\n",
     "y1=data1[:,1]\n",
     "x2=data2[:,0]\n",
@@ -65,7 +66,7 @@
     "color = 'tab:red'\n",
     "ax1.set_xlim([450,3050])\n",
     "ax1.set_ylim([0.32,0.67])\n",
-    "ax1.set_xlabel('Time (fs)')\n",
+    "ax1.set_xlabel('$t$, $t_{\\\\rm{pa}}$ (fs)')\n",
     "ax1.set_ylabel('Ionization probability', color=color)\n",
     "ax1.scatter(x1, y1, color=color,marker=\".\")\n",
     "ax1.tick_params(axis='y', labelcolor=color)\n",
