--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -61,6 +61,7 @@
     "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\42n\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\55\\\\'\n",
     "#dir='D:\\\\doc\\\\data\\\\ion1test\\\\shift\\\\t2\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1140fs\\\\0\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -578,7 +579,7 @@
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(a)\",loc='left')\n",
     "    plt.xlim(TimeBegin+1, TimeEnd )\n",
-    "    plt.ylim(min(y),180)\n",
+    "    #plt.ylim(min(y),180)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -591,7 +592,7 @@
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(b)\",loc='left')\n",
     "    plt.xlim(TimeTurn+1,TimeEnd)\n",
-    "    plt.ylim(min(y),180)\n",
+    "    #plt.ylim(min(y),180)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -603,7 +604,7 @@
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
     "    plt.xlim(TimeTurn+1,TimeEnd)\n",
-    "    plt.ylim(min(y),180)\n",
+    "    #plt.ylim(min(y),180)\n",
     "    plt.title(\"(c)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
@@ -616,7 +617,7 @@
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(d)\",loc='left')\n",
-    "    plt.ylim(min(y),180)\n",
+    "    #plt.ylim(min(y),180)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    #plt.colorbar(location='top',orientation='horizontal')\n",
     "    plt.colorbar()\n",
@@ -631,7 +632,7 @@
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(a)\",loc='left')\n",
     "    plt.xlim(TimeBegin+1, TimeEnd )\n",
-    "    plt.ylim(min(y),180)\n",
+    "    #plt.ylim(min(y),180)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -644,7 +645,7 @@
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(b)\",loc='left')\n",
     "    plt.xlim(TimeTurn+1,TimeEnd)\n",
-    "    plt.ylim(min(y),180)\n",
+    "    #plt.ylim(min(y),180)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -656,7 +657,7 @@
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
     "    plt.xlim(TimeTurn+1,TimeEnd)\n",
-    "    plt.ylim(min(y),180)\n",
+    "    #plt.ylim(min(y),180)\n",
     "    plt.title(\"(c)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
@@ -668,7 +669,7 @@
     "    x=DataAng[:,0]\n",
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
-    "    plt.ylim(min(y),180)\n",
+    "    #plt.ylim(min(y),180)\n",
     "    plt.title(\"(d)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
