--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -59,9 +59,11 @@
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
     "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\42n\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\55\\\\'\n",
-    "#dir='D:\\\\doc\\\\data\\\\ion1test\\\\shift\\\\t2\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1140fs\\\\0\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\test\\\\'\n",
+    "# #dir='D:\\\\doc\\\\data\\\\ion1test\\\\shift\\\\t2\\\\'\n",
+    "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1140fs\\\\0\\\\'\n",
+    "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\wave\\\\21\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -315,8 +317,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "plt.figure(figsize=(cm_to_inch(16),cm_to_inch(13)))\n",
+    "plt.figure(figsize=(cm_to_inch(24),cm_to_inch(18)))\n",
     "data=np.loadtxt(dir+\"Laser.dat\")\n",
     "x =data[:,0]\n",
     "y1=data[:,1]\n",
@@ -1064,9 +1073,11 @@
     "z2=data[:,3]\n",
     "plt.tricontourf(x,y,z1,levels,cmap='jet')\n",
     "plt.colorbar()\n",
+    "plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.subplot(2,1,2)\n",
     "plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
     "plt.colorbar()\n",
+    "plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.subplots_adjust(left=0.125,\n",
     "                    bottom=0.1, \n",
     "                    right=0.9, \n",
@@ -1092,10 +1103,12 @@
     "plt.subplot(2,1,1)\n",
     "plt.tricontourf(x,y,z1,levels,cmap='jet')#,vmin=0.0,vmax=0.1)\n",
     "plt.colorbar()\n",
+    "plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(min(y),11)\n",
     "plt.subplot(2,1,2)\n",
     "plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
     "plt.colorbar()\n",
+    "plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(min(y),11)\n",
     "plt.subplots_adjust(left=0.125,\n",
     "                    bottom=0.1, \n",
@@ -1151,7 +1164,7 @@
     "    plt.ylim(-0.5,19.5)\n",
     "    plt.xlabel('$V$')\n",
     "    plt.ylabel('$J$')\n",
-    "    plt.title(\"(a) Ground state, $t$ = \"+fileList[ii][11:13]+\" fs\",loc='left')\n",
+    "    plt.title(\"(a) Ground state, $t$ = \"+fileList[ii][11:17]+\" fs\",loc='left')\n",
     "    plt.colorbar()\n",
     "    ax2=plt.subplot(1,2,2)\n",
     "    DataPop =np.loadtxt(s2)\n",
@@ -1176,7 +1189,7 @@
     "    plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
     "    ax2.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
     "    ax2.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "    plt.title(\"(b) Excited state, $t$ = \"+fileList[ii][11:13]+\" fs\",loc='left')\n",
+    "    plt.title(\"(b) Excited state, $t$ = \"+fileList[ii][11:17]+\" fs\",loc='left')\n",
     "    plt.xlabel('$V$')\n",
     "    plt.ylabel('$J$')\n",
     "    plt.xlim(-0.5,19.5)\n",
@@ -1188,7 +1201,7 @@
     "                        top=0.9, \n",
     "                        wspace=0.25, \n",
     "                        hspace=0.2)\n",
-    "    plt.savefig(dir+\"p_vgr_vj\\\\\"+fileList[ii][:16]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n"
+    "    plt.savefig(dir+\"p_vgr_vj\\\\\"+fileList[ii][:17]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n"
    ]
   },
   {
@@ -1298,7 +1311,6 @@
     "                        wspace=0.3, \n",
     "                        hspace=0.3)\n",
     "    plt.savefig(dir+\"wave\\\\\"+fileList[i][:16]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
-    "\n",
     "    plt.show()\n",
     " \n"
    ]
