--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -59,11 +59,11 @@
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
     "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\42n\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\test\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\onlyAli\\\\'\n",
     "# #dir='D:\\\\doc\\\\data\\\\ion1test\\\\shift\\\\t2\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1140fs\\\\0\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\wave\\\\21\\\\'\n",
-    "dir='D:\\\\dataofpro\\\\'\n",
+    "#dir='D:\\\\dataofpro\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -110,139 +110,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot absorption of the dimsension of the internuclear distance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if os.path.exists(dir+'absb.dat'):\n",
-    "    data=np.loadtxt(dir+'Absb.dat') #get data form dir+'absb.dat'\n",
-    "else:\n",
-    "    data=np.loadtxt(dir+'Absorption.dat')\n",
-    "x=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "plt.xlabel(\"$\\t{R}$ (a.u.) \")\n",
-    "plt.ylabel(\"Absorptivity\")\n",
-    "#x=x\n",
-    "#y=y1\n",
-    "#plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.95,\"(a)\")\n",
-    "plt.plot(x,y1,'k-')\n",
-    "#plt.savefig(dir+\"Absorption.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot potential energy of electric states"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if os.path.exists(dir+'InitialEigenvalue.dat'):\n",
-    "    data=np.loadtxt(dir+'InitialEigenvalue.dat')\n",
-    "elif os.path.exists(dir+'eig.dat'):\n",
-    "    data=np.loadtxt(dir+'eig.dat')\n",
-    "x=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "plt.step(x,y1,x,y2)\n",
-    "plt.xlim(0,127)\n",
-    "plt.xlabel('$|V,J=0\\\\rangle$')\n",
-    "plt.ylabel('Eigenvalue (a.u.)')\n",
-    "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$'],loc=(0.1,0.7))\n",
-    "plt.savefig(dir+\"EigenvalueOfVib.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if os.path.exists(dir+'pott.dat'):\n",
-    "    data=np.loadtxt(dir+\"Pott.dat\")\n",
-    "else:\n",
-    "    data=np.loadtxt(dir+\"PotentialEnergy.dat\")\n",
-    "\n",
-    "x=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "y3=data[:,3]\n",
-    "plt.xlabel(\"$\\t{R}$ (a.u.) \")\n",
-    "plt.ylabel(\"Energy (a.u.)\")\n",
-    "plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'--')\n",
-    "plt.ylim(-0.05,0.5)\n",
-    "plt.xlim(1.75,11.)\n",
-    "plt.fill_between(x,y3,x,y3+0.2)\n",
-    "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$','$X^2 \\Sigma ^+$'],loc=(0.65,0.7))\n",
-    "plt.savefig(dir+\"pott.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot Initial wave function "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy.ndimage\n",
-    "plt.figure(figsize=(8/2.54,6.8/2.54))\n",
-    "if os.path.exists(dir+\"wave2d.dat\"):\n",
-    "    DataAng =np.loadtxt(dir+\"wave2d.dat\")\n",
-    "else:   \n",
-    "    DataAng =np.loadtxt(dir+\"InitialWavePacket.dat\")\n",
-    "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
-    "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[:,0]\n",
-    "y=DataAng[:,1]\n",
-    "z=DataAng[:,2]\n",
-    "plt.xlim(-5, 5)\n",
-    "plt.ylim(-5, 5)\n",
-    "ax=plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "\n",
-    "#interpolation='spline16'\n",
-    "plt.colorbar()\n",
-    "plt.xlabel(\"$\\tR$ (a.u.)\")\n",
-    "plt.ylabel(\"$\\tR$ (a.u.)\")\n",
-    "#plt.savefig(dir+\"InitialWavePacket.\"+figureType,bbox_inches = 'tight',transparent=True,dpi=figureDPI)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot the electronic field of the lasers"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "if os.path.exists(dir+'FreDis1.dat'):\n",
-    "    legengLoc=(0.6,0.8)\n",
+    "    legengLoc=(0.25,0.8)\n",
     "    plt.figure(figsize=((16/2.54),(13/2)))\n",
     "    #plt.figure(figsize=(8,6))\n",
     "    titleLoc=\"left\"\n",
@@ -317,7 +191,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if os.path.exists(dir+\"popu.dat\"):\n",
+    "    data=np.loadtxt(dir+\"Popu.dat\")\n",
+    "elif os.path.exists(dir+\"PopulationOfState.dat\"):\n",
+    "    data = np.loadtxt(dir+\"PopulationOfState.dat\")\n",
+    "else:\n",
+    "    print(\"No PopulationOfState dataset found.\")\n",
+    "plt.xlim(TimeTurn,TimeEnd)\n",
+    "ax=plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
+    "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"Population\")\n",
+    "plt.savefig(dir+\"PopulationOfState.\"+figureType,dpi=figureDPI,bbox_inches=\"tight\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -543,6 +430,7 @@
     "x=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
+    "print(max(y2),min(y2))\n",
     "fig, ax1 = plt.subplots()\n",
     "color = 'tab:red'\n",
     "ax1.set_xlabel('Time ('+timeUnit+')')\n",
@@ -856,26 +744,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if os.path.exists(dir+\"popu.dat\"):\n",
-    "    data=np.loadtxt(dir+\"Popu.dat\")\n",
-    "elif os.path.exists(dir+\"PopulationOfState.dat\"):\n",
-    "    data = np.loadtxt(dir+\"PopulationOfState.dat\")\n",
-    "else:\n",
-    "    print(\"No PopulationOfState dataset found.\")\n",
-    "plt.xlim(TimeTurn,TimeEnd)\n",
-    "ax=plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
-    "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
-    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
-    "plt.ylabel(\"Population\")\n",
-    "plt.savefig(dir+\"PopulationOfState.\"+figureType,dpi=figureDPI,bbox_inches=\"tight\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1064,6 +932,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import scipy.ndimage\n",
+    "plt.figure(figsize=(8/2.54,6.8/2.54))\n",
+    "if os.path.exists(dir+\"wave2d.dat\"):\n",
+    "    DataAng =np.loadtxt(dir+\"wave2d.dat\")\n",
+    "else:   \n",
+    "    DataAng =np.loadtxt(dir+\"InitialWavePacket.dat\")\n",
+    "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=DataAng[:,0]\n",
+    "y=DataAng[:,1]\n",
+    "z=DataAng[:,2]\n",
+    "plt.xlim(-5, 5)\n",
+    "plt.ylim(-5, 5)\n",
+    "ax=plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "\n",
+    "#interpolation='spline16'\n",
+    "plt.colorbar()\n",
+    "plt.xlabel(\"$\\tR$ (a.u.)\")\n",
+    "plt.ylabel(\"$\\tR$ (a.u.)\")\n",
+    "#plt.savefig(dir+\"InitialWavePacket.\"+figureType,bbox_inches = 'tight',transparent=True,dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(dir+'pott.dat'):\n",
+    "    data=np.loadtxt(dir+\"Pott.dat\")\n",
+    "else:\n",
+    "    data=np.loadtxt(dir+\"PotentialEnergy.dat\")\n",
+    "\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=data[:,3]\n",
+    "plt.xlabel(\"$\\t{R}$ (a.u.) \")\n",
+    "plt.ylabel(\"Energy (a.u.)\")\n",
+    "plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'--')\n",
+    "plt.ylim(-0.05,0.5)\n",
+    "plt.xlim(1.75,11.)\n",
+    "plt.fill_between(x,y3,x,y3+0.2)\n",
+    "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$','$X^2 \\Sigma ^+$'],loc=(0.65,0.7))\n",
+    "plt.savefig(dir+\"pott.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(dir+'InitialEigenvalue.dat'):\n",
+    "    data=np.loadtxt(dir+'InitialEigenvalue.dat')\n",
+    "elif os.path.exists(dir+'eig.dat'):\n",
+    "    data=np.loadtxt(dir+'eig.dat')\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "plt.step(x,y1,x,y2)\n",
+    "plt.xlim(0,127)\n",
+    "plt.xlabel('$|V,J=0\\\\rangle$')\n",
+    "plt.ylabel('Eigenvalue (a.u.)')\n",
+    "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$'],loc=(0.1,0.7))\n",
+    "plt.savefig(dir+\"EigenvalueOfVib.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(dir+'absb.dat'):\n",
+    "    data=np.loadtxt(dir+'Absb.dat') #get data form dir+'absb.dat'\n",
+    "else:\n",
+    "    data=np.loadtxt(dir+'Absorption.dat')\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "plt.xlabel(\"$\\t{R}$ (a.u.) \")\n",
+    "plt.ylabel(\"Absorptivity\")\n",
+    "#x=x\n",
+    "#y=y1\n",
+    "#plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.95,\"(a)\")\n",
+    "plt.plot(x,y1,'k-')\n",
+    "#plt.savefig(dir+\"Absorption.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(8/2.54,13/2.54))\n",
     "plt.subplot(2,1,1)\n",
     "data=np.loadtxt(dir+\"qua_int_ang.dat\")\n",
@@ -1118,6 +1084,15 @@
     "                    hspace=0.2)\n",
     "plt.savefig(dir+\"QuaIntRad.\"+figureType,bbox_inches = 'tight',transparent=True,dpi=figureDPI)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "return"
    ]
   },
   {
