--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -82,12 +82,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(cm2inch(24),cm2inch(18)))\n",
-    "data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\ali\\\\totalangdis.dat')\n",
-    "data2=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\OnlyPump\\\\totalangdis.dat')\n",
+    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(16),cm2inch(12)))\n",
+    "data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\Onlyali\\\\totalangdis.dat')\n",
+    "data2=data1#np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\OnlyPump\\\\totalangdis.dat')\n",
     "data3=np.loadtxt('D:\\\\doc\\\\data\\\\ion1testold\\\\1140fs\\\\10\\\\totalangdis.dat')\n",
     "import matplotlib.gridspec as gridspec\n",
-    "fig = plt.figure(tight_layout=True)\n",
+    "\n",
     "gs = gridspec.GridSpec(2, 2)\n",
     "ax = fig.add_subplot(gs[0,:])\n",
     "x=data1[:,0]\n",
@@ -96,12 +96,14 @@
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "ax.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.title(\"(a)\",loc='left')\n",
     "ax = fig.add_subplot(gs[1, 0])\n",
     "x=data2[:,0]\n",
     "y=data2[:,1]\n",
     "z=data2[:,2]\n",
     "plt.xlim(1620,1680)\n",
     "ax.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.title(\"(b)\",loc='left')\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "for tick in ax.get_yticklabels():\n",
@@ -112,6 +114,7 @@
     "z=data3[:,2]\n",
     "plt.xlim(1620,1680)\n",
     "ax.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.title(\"(c)\",loc='left')\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "for tick in ax.get_yticklabels():\n",
@@ -119,6 +122,46 @@
     "\n",
     "plt.savefig(dir+'f3Wave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\pop.dat')\n",
+    "from scipy import interpolate\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "x1=np.arange(10,151,1)\n",
+    "print(len(x1))\n",
+    "# fn=interpolate.interp1d(x,y,kind='nearest')\n",
+    "# fz=interpolate.interp1d(x,y,kind='zero')\n",
+    "# fs=interpolate.interp1d(x,y,kind='slinear')\n",
+    "# fq=interpolate.interp1d(x,y,kind='quadratic')\n",
+    "fc=interpolate.interp1d(x,y,kind='cubic')\n",
+    "#method of kind: nearest, zero, slinear, quadratic,cubic\n",
+    "y1=fc(x1)\n",
+    "# y2=fz(x1)\n",
+    "# y3=fs(x1)\n",
+    "# y4=fq(x1)\n",
+    "#y5=fc(x1)\n",
+    "color='tab:red'\n",
+    "plt.plot(x,y,color=color,marker=\".\")\n",
+    "color = 'tab:blue'\n",
+    "#plt.plot(x1,y1,'--',color=color,marker=\".\")#,x1,y2,x1,y3,x1,y4,x1,y5)\n",
+    "#plt.legend([\"Origin\"])#,\"nearest\",\"zero\",\"slinear\",\"quadratic\",\"cubic\"])\n",
+    "plt.xlabel(\"$t_{\\\\rm{pp}}$ (fs)\")\n",
+    "plt.ylabel(\"Ionization probability\")\n",
+    "plt.savefig(dir+\"f4pop.\"+figureType,bbox_inches=\"tight\",dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
